# SpecDrive

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
.claude/commands/: specdrive.md
.specdrive/: decision-log.md  fingerprint  state.json
src/specdrive/: __init__.py  adapters.py  cli.py  mutate.py  playbook.md  state.py
src/specflow/: __init__.py  adapters.py  cli.py  playbook.md  state.py
tests/: test_adapters.py  test_cli.py  test_mutate.py  test_next.py  test_playbook.py  test_state.py  test_validate.py
