[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specdrive"
dynamic = ["version"]
description = "Take a project from fuzzy idea to finished thing without drifting from the goal. A portable, agent-agnostic methodology for LLM coding agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alan" }]
keywords = ["llm", "agent", "methodology", "scaffolding", "ai", "workflow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
specdrive = "specdrive.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.version]
path = "src/specdrive/state.py"
pattern = "SCHEMA_VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/specdrive"]
